--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuehan Portfolio</title>
+    <title>Mariane Faith Portfolio</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -48,8 +48,8 @@
             background-size: cover;
             background-position: left;
             margin-bottom: 20px;
-            box-shadow: 0 0 15px 5px rgba(0, 191, 255, 0.7), 
-                        0 0 30px 10px rgba(0, 191, 255, 0.5);
+            box-shadow: 0 0 15px 5px rgba(89, 0, 255, 0.7), 
+                        0 0 30px 10px rgba(89, 0, 255, 0.5);
             transition: box-shadow 0.3s ease-in-out;
             margin-top: 25px;
         }
@@ -81,7 +81,7 @@
         }
 
         .links a {
-            color: #00bfff;
+            color: #f5f5f5;
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.5em;
@@ -96,6 +96,7 @@
 
         .links a:hover {
             text-decoration: underline;
+            color: #8400ff;
         }
 
         .footer {
@@ -262,8 +263,8 @@
             padding: 20px;
             object-fit: contain;
             border-radius: 50%;
-            box-shadow: 0 0 15px rgba(0, 191, 255, 0.7);
-            transition: transform 0.3s ease-in-out;
+            box-shadow: 0 0 15px rgba(55, 8, 224, 0.7);
+            transition: transform 0.5s ease-in-out;
         }
 
         .landing-image img:hover {
@@ -277,7 +278,7 @@
 
         .landing-text h2 {
             font-size: 2.5em;
-            color: #00bfff;
+            color: #8400ff;
             margin-bottom: 15px;
         }
 
@@ -402,34 +403,32 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>Mariane Faith S. Torreverde</h1>
+        <p class="description">A full-stack in the making</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>Experience:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>Front-end Developer (2026 - ) </li>
+                <li>USC-CITE UX/UI Designer (2024 - 2026)</li>
+                <li>Freelancer (Creative Designer) (2019 - Present)</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Education:</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>College (2022 - 2026)</li>
+                <li>High School (2016 - 2022)</li>
+                <li>Elementary (2XXX-2XXX)</li>
             </ul>
         </div>
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://www.linkedin.com/in/marianeft/"><i class="fab fa-linkedin"></i>LinkedIn</a>
+            <a href="https://github.com/marianeft"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://www.facebook.com/maryantorreverde"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
